[gd_scene load_steps=19 format=3 uid="uid://dnjh5cp5pty80"]

[ext_resource type="Script" path="res://slime/slime.gd" id="1_v01na"]
[ext_resource type="Texture2D" uid="uid://dj1lniiic5g4a" path="res://slime/slime-sheet.png" id="2_mg34t"]
[ext_resource type="AudioStream" uid="uid://x0dx6i6ppru3" path="res://slime/slime_death.mp3" id="3_4gltw"]
[ext_resource type="AudioStream" uid="uid://1vv8vv77w7o3" path="res://slime/slime_hit.mp3" id="4_wvmpm"]
[ext_resource type="Texture2D" uid="uid://dnc0jv38oq7xg" path="res://player/health_bar/under.png" id="5_3mhqb"]
[ext_resource type="Texture2D" uid="uid://cminwsh4peess" path="res://player/health_bar/progress.png" id="6_0ykc1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lolsg"]
size = Vector2(8, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_j2b42"]
radius = 200.0

[sub_resource type="Curve" id="Curve_ucef7"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_m575c"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfv32"]
atlas = ExtResource("2_mg34t")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfqq2"]
atlas = ExtResource("2_mg34t")
region = Rect2(0, 8, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_rg6dl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfv32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfqq2")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="Animation" id="Animation_1qyva"]
resource_name = "die"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DeathParticles:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"disable_scene_processing"
}, {
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitStopTimer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [-1],
"method": &"start"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlimeDeath:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HealthBar:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5gxem"]
resource_name = "hit"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 0.8), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SlimeHit:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fgcop"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DeathParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:process_mode")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SlimeDeath:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SlimeHit:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HealthBar:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g6c58"]
resource_name = "spawn"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_djgnn"]
_data = {
"Die": SubResource("Animation_1qyva"),
"Hit": SubResource("Animation_5gxem"),
"RESET": SubResource("Animation_fgcop"),
"spawn": SubResource("Animation_g6c58")
}

[node name="Slime" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_v01na")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lolsg")

[node name="DetectionRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource("CircleShape2D_j2b42")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
process_mode = 3
emitting = false
amount = 80
one_shot = true
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0
scale_amount_min = 3.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_ucef7")
color_ramp = SubResource("Gradient_m575c")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rg6dl")
autoplay = "default"
frame_progress = 0.595386

[node name="HitStopTimer" type="Timer" parent="."]
process_mode = 3
wait_time = 0.1
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="SlimeDeath" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("3_4gltw")

[node name="SlimeHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wvmpm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_djgnn")
}
autoplay = "spawn"

[node name="HealthBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(40, 8)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
value = 100.0
texture_under = ExtResource("5_3mhqb")
texture_progress = ExtResource("6_0ykc1")

[connection signal="body_entered" from="DetectionRange" to="." method="_on_detection_range_body_entered"]
[connection signal="finished" from="DeathParticles" to="." method="_on_death_particles_finished"]
[connection signal="timeout" from="HitStopTimer" to="." method="_on_hit_stop_timer_timeout"]
